# rss-sync

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.static-link  README.md  log4rs.yaml  settings.toml
.github/workflows/: rss-sync-static-link-deploy.yml
scripts/: build-app.sh  startup-app.sh
scripts/diesel/: diesel-dolphin-model.sh  diesel-dolphin-schema.sh  diesel-dolphin.toml
src/: main-legac.rs  main.rs
src/cache/: mod.rs  redis_rss.rs
src/common/: database.rs  health_controller.rs  mod.rs
src/common/monitor/: health_controller.rs  mod.rs  profile_controller.rs
src/cruise/: mod.rs
src/cruise/celery/: celery_init.rs
src/cruise/channel/: mod.rs  rss_channel.rs
src/cruise/sched/: scheduler.rs
src/model/: mod.rs
src/model/article/: add_article.rs  add_article_content.rs  mod.rs  stream_article.rs
src/model/diesel/: mod.rs
src/model/diesel/dolphin/: custom_dolphin_models.rs  dolphin_models.rs  dolphin_schema.rs  mod.rs
src/rss/: mod.rs
src/rss/celery/: celery_init.rs  mod.rs
src/rss/models/: mod.rs
src/rss/models/appenum/: celery_opt.rs  mod.rs
src/rss/sched/: scheduler.rs
src/service/: mod.rs
src/service/article/: article_content_service.rs  article_service.rs  mod.rs
src/service/channel/: channel_service.rs
