[package]
name = "rss-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
celery="0.5.4"
env_logger="0.10.0"
tokio = { version = "1.29.1", features = ["full"] }
structopt = "0.3"
serde = { version = "1.0.64", features = ["derive"] }
anyhow = "1.0.71"
async-trait = "0.1.71"
log = "0.4.0"
openssl = "*"
serde_json = "1.0.64"
openssl-probe = "0.1.2"
diesel = { version = "2.0.4", features = ["postgres","64-column-tables","chrono","serde_json"] }
chrono = {version = "0.4",features = ["serde"]}
rust_wheel = { git = "https://github.com/jiangxiaoqiang/rust_wheel.git", branch = "diesel2.0", features = ["model","common","rwconfig"]}
reqwest = { version = "0.11.18", features = ["json"] }
rss = "2.0.4"
feed-rs = "1.3.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
cron = "0.11"
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.2"
log4rs = "1.2.0"

[dependencies.jemalloc-sys]
version = "0.3.2"
features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms"]

[profile.release]
debug = true